[package]
name = "async-stomp"
version = "0.5.0"
description = "An asynchronous streaming STOMP client"
authors = ["Mattias Eriksson <snaggen@mayam.com>"]
original-authors = ["Alex Whitney <adwhit@fastmail.com>, Jens Walter <jens@apimeister.com>, Alexander Kunde <a.kunde@outlook.com>"]
repository = "https://github.com/snaggen/async-stomp"
homepage = "https://github.com/snaggen/async-stomp"
keywords = ["stomp", "tokio", "streaming", "async"]
license = "EUPL-1.2"
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2021"

[dependencies]
bytes = "1.8.0"
custom_debug_derive = "0.6.1"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
winnow = "0.6"
typed-builder = "0.20.0"

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
