[package]
name = "async-stomp"
version = "0.6.1"
description = "An asynchronous streaming STOMP client"
authors = [
    "Mattias Eriksson <snaggen@mayam.com>",
    "Alex Whitney <adwhit@fastmail.com>",
    "Jens Walter <jens@apimeister.com>",
    "Alexander Kunde <a.kunde@outlook.com>",
    "Jacques Joubert <jjoubert@kigo.io>",
]
repository = "https://github.com/snaggen/async-stomp"
homepage = "https://github.com/snaggen/async-stomp"
keywords = ["stomp", "tokio", "streaming", "async"]
license = "EUPL-1.2"
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2021"

[dependencies]
bytes = "1.8.0"
custom_debug_derive = "0.6.1"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
winnow = "0.7"
typed-builder = "0.21.0"
tokio-rustls = "0.26.2"
webpki-roots = "0.26.8"
rustls = "0.23.25"

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
