[package]
name = "async-stomp"
version = "0.6.2"
description = "An asynchronous streaming STOMP client"
authors = [
    "Mattias Eriksson <snaggen@mayam.com>",
    "Alex Whitney <adwhit@fastmail.com>",
    "Jens Walter <jens@apimeister.com>",
    "Alexander Kunde <a.kunde@outlook.com>",
    "Jacques Joubert <jjoubert@kigo.io>",
]
repository = "https://github.com/snaggen/async-stomp"
homepage = "https://github.com/snaggen/async-stomp"
keywords = ["stomp", "tokio", "streaming", "async"]
license = "EUPL-1.2"
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2024"

[dependencies]
bytes = "1.10.1"
custom_debug_derive = "0.6.2"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
winnow = "0.7"
typed-builder = "0.23.2"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.2"
rustls = "0.23.31"

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
